--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
       if (inputValue === "KOPAL.1-GAME") {
         window.location.href = "minecraft.html";
       } else if (inputValue === "KOPAL.2-GAME") {
-        window.location.href = "FlappyBird.html";
+        window.location.href = "bird.html";
       }
     }
   </script>
