--- a/main.html
+++ b/main.html
@@ -10,12 +10,14 @@
       } else if (inputValue === "KOPAL.2-GAME") {
         window.location.href = "bird.html";
       }
+        else if (inputValue === "KOPAL.LIST") {
+        window.location.href = "list.html";
     }
   </script>
 </head>
 <body>
   <input type="text" id="myInput" placeholder="Enter a value">
   <button onclick="checkInputValue()">Check</button>
-  <div>Don't know id's? Check our discord!
+  <div>Don't know id's? Check our list! ID for list: KOPAL.LIST
 </body>
 </html>
