--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Button Click Example</title>
+  <title>DaviGaems</title>
   <script>
     function checkInputValue() {
       var inputValue = document.getElementById("myInput").value;
