--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         window.location.href = "bird.html";
       }
         else if (inputValue === "KOPAL.LIST") {
-        window.location.href = "list.html";
+        window.location.href = "list";
     }
   </script>
 </head>
