--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
       }
         else if (inputValue === "KOPAL.LIST") {
         window.location.href = "list.html";
+      }
+        else if (inputValue === "KOPAL.8") {
+        window.location.href = "8.html";
     }
   </script>
 </head>
