--- a/list.html
+++ b/list.html
@@ -7,6 +7,7 @@
   <h1>Officialy Reviewed Games:</h1>
   <div>Minecraft: KOPAL.1-GAME</div>
   <div>Floppy Bird: Kopal.2-GAME</div>
+  <div>Kopal8: Kopal.8</div>
   <h2>Unofficial Games:</h2>
   <div>ERROR: KOPAL0 - N/A</div>
 </body>
