--- a/main.html
+++ b/main.html
@@ -9,11 +9,9 @@
         window.location.href = "minecraft.html";
       } else if (inputValue === "KOPAL.2-GAME") {
         window.location.href = "bird.html";
-      }
-        else if (inputValue === "KOPAL.LIST") {
+      } else if (inputValue === "KOPAL.LIST") {
         window.location.href = "list.html";
-      }
-        else if (inputValue === "KOPAL.8") {
+      } else if (inputValue === "KOPAL.8") {
         window.location.href = "8.html";
     }
   </script>
